fixed card height and grid spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -133,7 +133,7 @@ position: relative;
 .notion-collection-card-cover {
   border-radius: 8px;
   width: 100%;
-  height: 80%;
+  height: auto;
 }
 
 .notion-page-title .notion-page-icon-inline {
@@ -352,4 +352,5 @@ position: relative;
   border-top: none;
   grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   grid-gap: 32px;
+  grid-auto-rows: 0%;
 }
